src/css/styles.scss
/* ... */
.add-to-cart-button {
  height: 2rem;
  background: $orange;
  transition: .3s;
  border: 1px solid transparent;
  box-sizing: border-box;

  &_full {
    @media (min-width: 992px) {
      height: 2.5rem;
    }
  }

  &:hover {
    background: $orange-hover;
  }

  &:active {
    background-color: $orange-active;
    border: s(1) solid $orange-hover;
  }
}

.bonus-block-item {

  &__inner {
    border: 1px solid #D0D0D0;
    min-height: s(150);
    background-image: linear-gradient(113deg, #FFFFFF 0%, #FFFFFF 63%, transparent 63.3%, transparent 100%);

    @media (min-width: 576px) {
      background-image: linear-gradient(113deg, #FFFFFF 0%, #FFFFFF 53%, transparent 53.3%, transparent 100%);
      min-height: s(300);
    }

    @media (min-width: 768px) {
      min-height: s(352);
    }

    @media (min-width: 992px) {
      background-image: linear-gradient(113deg, #FFFFFF 0%, #FFFFFF 60%, transparent 60.3%, transparent 100%);
      height: s(352);
    }

    @media (min-width: 1200px) {
      background-image: linear-gradient(113deg, #FFFFFF 0%, #FFFFFF 56%, transparent 56.3%, transparent 100%);

    }

    @media (min-width: 1440px) {
      background-image: linear-gradient(113deg, #FFFFFF 0%, #FFFFFF 48%, transparent 48.3%, transparent 100%);
    }
  }
}

.more-with-arrow {
  &__arrow {
    transition: .3s;
    transform: translateX(0);
  }

  &:hover {
    .more-with-arrow__arrow {
      transform: translateX(1rem);
    }
  }
}

.service-block-item {
  height: s(208);

  @media (min-width: 576px) {
    height: s(320);
  }

  @media (min-width: 576px) {
    height: s(220);
  }

  @media (min-width: 768px) {
    height: s(280);
  }

  @media (min-width: 992px) {
    height: s(250);
  }

  @media (min-width: 1200px) {
    height: s(290);
  }

  @media (min-width: 1440px) {
    height: s(320);
  }

  &__inner {
    max-width: s(288);
    margin-left: auto;
    margin-right: auto;

    @media (min-width: 768px) {
      max-width: 100%;
    }

    &:hover {
      opacity: .9;
    }
  }
}

.brand {
  &__img-wrap {
    width: s(216);
    height: s(64);
  }
}

.action-item {
  max-width: 100%;

  @media (min-width: 576px) {
    max-width: 50%;
  }

  @media (min-width: 992px) {
    max-width: 33%;
  }
}

.footer {
  ul {
    li {
      a {
        padding-top: s(12);
        display: block;
      }

      &.active {
        color: $orange;
        pointer-events: none;
      }
    }
  }

  &__menu-title + ul {
    display: none;

    @media (min-width: 576px) {
      display: block !important;
    }
  }
}

@import 'checkbox';
@import 'add-to-cart';


.catalog-menu {
  transition: .5s;
  top: s(72);
  left: 0;
  z-index: 999;
  display: none;
  width: 44.5rem;
  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);

  ul {
    display: block;
    flex-direction: column;
  }

  li {
    ul {
      display: none;
    }

    a {
      display: block;
      padding-top: .5rem;
      padding-bottom: .5rem;
      font-weight: 500;
      font-size: 1rem;

      &:hover {
        opacity: .75;
      }
    }

    li {
      a {
        font-size: s(14);
        font-weight: 300;
        padding-top: .3rem;
        padding-bottom: .3rem;
      }
    }
  }
}

.header__catalog-button:hover {

  .catalog-menu {
    display: flex;
  }
}

.right-tools {
  z-index: 999;
  right: 0;
  top: 45%;
  margin-top: - s(120);

  @media (min-width: 1441px) {
    width: s(80);
  }

  &__icons {
    z-index: 999;
  }

  &__item {
    cursor: pointer;
    position: relative;
    border: s(2) solid #ffffff;
    width: s(32);
    height: s(32);

    img {
      width: 16px;
      height: 16px;

      @media (min-width: 1441px) {
        width: auto;
        height: auto;
      }
    }

    @media (min-width: 1441px) {
      width: s(48);
      height: s(48);
    }

    &.active {
      pointer-events: none;
    }
  }

  &__cart-count {
    height: s(18);
    width: s(18);
    border-radius: 50%;
    background-color: #FFC107;
    right: 0;
    top: - s(4);
    margin-right: - s(9);
    font-weight: 600;
    font-size: s(12);

    @media (min-width: 1441px) {
      height: s(24);
      width: s(24);
      font-size: s(14);
      margin-right: - s(12);
    }
  }
}

[data-box] {
  z-index: 998;
  right: 0;
  top: 50%;
  transform: translateY(-50%);
  box-shadow: 0px 2px 20px rgba(0, 0, 0, 0.1);
}

[data-box="cart"] {
  width: s(800);

  @media (min-width: 1441px) {
    width: s(997);
  }
}

[data-box="lk"] {
  width: s(736);
}

.right-tools-box {
  &__cart-inner {
    max-width: s(670);
    height: 17rem;
    overflow-y: auto;
  }

  &__lk-inner-top {
    max-width: s(328);
  }

  &__lk-inner-bottom {
    max-width: s(448);
  }
}


.cart-content-item {

  &__img-wrap {
    width: s(88);
    height: s(88);

    @media (min-width: 576px) {
      width: s(104);
      height: s(104);
    }
  }

  &__name {
    &_short {
      max-width: s(568);
    }
  }
}

.orange-button {
  background-color: $orange;
  border: s(1) solid transparent;
  transition: .3s;
  color: #fff;
  font-weight: 500;

  &:hover {
    background-color: $orange-hover;
  }

  &:active {
    background-color: $orange-active;
    border-color: $orange-hover;
  }
}

.blue-button {
  background-color: $blue;
  border: s(1) solid transparent;
  transition: .3s;
  color: #fff;
  font-weight: 500;

  &:hover {
    background-color: $blue-hover;
  }

  &:active {
    background-color: $blue-hover;
    border-color: $blue;
  }
}

.white-button {
  background: #FFFFFF;
  border: s(1) solid #D1D1D1;
  transition: .3s;
  color: #3A3737;
  font-weight: 500;

  &:hover {
    box-shadow: 0 s(6) s(10) rgba(0, 0, 0, 0.05);
    border-color: transparent;
  }

  &:active {
    box-shadow: 0 0 s(10) rgba(0, 0, 0, 0.05);
    border-color: transparent;
  }
}
/* ... */

